--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(.)
 
 add_executable(dsa_final_project
-        insertion_sort.cpp)
+        insertion_sort.cpp parallel_insertion_sort.cpp)
 
-add_executable(tests unit_tests.cpp insertion_sort.cpp)
+add_executable(tests unit_tests.cpp insertion_sort.cpp merge_sort.cpp quick_sort.cpp)
+
+add_executable(benchmarking benchmark.cpp insertion_sort.cpp merge_sort.cpp quick_sort.cpp)
